--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,5 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+chrono = "0.4.31"
 clap = { version = "4.4.7", features = ["derive"] }
-tabled = "0.14.0"
+owo-colors = "3.5.0"
+tabled = { version = "0.14.0", features = ["color"]}
